--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.8.7)
 PROJECT(Rugal C)
-SET(SRC_LIST src/main.c src/implmentation/Stack.c src/implmentation/Node.c)
-INCLUDE_DIRECTORIES(src/header)
+SET(SRC_LIST src/main.c src/implment/Stack.c src/implment/Node.c)
+INCLUDE_DIRECTORIES(src/include)
 ADD_EXECUTABLE(Rugal ${SRC_LIST})
 SET(CMAKE_C_FLAGS "-O0 -ggdb -w -std=c99")
 SET(CMAKE_C_COMPILER gcc)
