--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,15 @@
 cmake_minimum_required(VERSION 2.8.7)
 PROJECT(Rugal C)
+find_package(Curses REQUIRED)
 SET(SRC_LIST src/main.c src/implment/Stack.c src/implment/Node.c)
-INCLUDE_DIRECTORIES(src/include)
-ADD_EXECUTABLE(Rugal ${SRC_LIST})
 SET(CMAKE_C_FLAGS "-O0 -ggdb -w -std=c99")
 SET(CMAKE_C_COMPILER gcc)
-#SET(LIBRARIES libm.so)
+SET(LIBRARIES libm.so)
+INCLUDE_DIRECTORIES(src/include)
+
+ADD_EXECUTABLE(Rugal ${SRC_LIST})
 #TARGET_LINK_LIBRARIES(Rugal ${LIBRARIES})
+#TARGET_LINK_LIBRARIES(Rugal ${CURSES_LIBRARIES})
 
 #cmake_minimum_required(VERSION 2.6)
 #PROJECT(Rugal CXX)
